--- a/01-mysql.yaml
+++ b/01-mysql.yaml
@@ -2,7 +2,15 @@
 - name: mysql configuration
   hosts: mysql
   become: true
+  vars: 
+    mysql_root_password: ExpenseApp@1
+    login_host: <private ip of mysql server>
   tasks:
+  - name: install PyMySQL. Its needed to access DB.
+    ansible.builtin.pip:
+      name: PyMySQL
+      executable: pip3.9
+      
   - name: install my sql server
     ansible.builtin.package:
       name: mysql-server
@@ -13,4 +21,21 @@
       name: mysqld
       state: started
       enabled: yes
+
+  - name: connect to mysql server
+    community.mysql.mysql_info:
+      login_user: root
+      login_password: "{{mysql_root_password}}"
+      login_host: "{{login_host}}"
+    ignore_errors: true
+    register: mysql_info
+
+  - name: print mysql info
+    ansible.builtin.debug:
+      msg: "mysql info is: {{mysql_info}}"
+
+  - name: setup mysql root password
+    ansible.builtin.command: "mysql_secure_installation --set-root-pass {{mysql_root_password}}"
+    when: mysql_info.failed is true
+      
       
